# hexlet-django-blog

./: db.sqlite3  pyproject.toml
blog.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hexlet_django_blog/: pyproject.toml  settings.py  urls.py  views.py
hexlet_django_blog/article/: admin.py  models.py  tests.py  urls.py  views.py
hexlet_django_blog/article/fixtures/: article.json
hexlet_django_blog/article/migrations/: 0001_initial.py
hexlet_django_blog/article/templates/article/: create.html  form.html  index.html  show.html  update.html
hexlet_django_blog/templates/: about.html  base.html  index.html
