[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.0",
    "django>=5.2.3",
    "dotenv>=0.9.9",
    "python-dotenv>=1.1.1",
]

[tool.uv.workspace]
members = ["hexlet_django_blog"]
